LeanCloud及七牛环境搭建

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/jaycemxy/163-music#readme",
   "dependencies": {
     "leancloud-storage": "^3.8.1",
-    "qiniu-js": "^1.0.22",
-    "plupload": "^2.3.2"
+    "plupload": "^2.3.2",
+    "qiniu": "^7.2.1",
+    "qiniu-js": "^1.0.22"
   }
 }
