--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jaycemxy/163-music#readme",
   "dependencies": {
+    "jquery": "^3.3.1",
     "leancloud-storage": "^3.8.1",
     "plupload": "^2.3.2",
     "qiniu": "^7.2.1",
